# ChangeLog for net-misc/aria2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.79 2012/05/05 03:20:39 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> aria2-1.12.1.ebuild,
  aria2-1.14.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  16 Jan 2012; Tiziano Müller <dev-zero@gentoo.org> aria2-1.14.1.ebuild:
  Make libgcrypt usage explicit.

  16 Jan 2012; Fabian Groffen <grobian@gentoo.org> aria2-1.14.1.ebuild:
  Fix Prefix parameter passing, inspired by Yuriy Taraday's work in bug #383547

  15 Jan 2012; Tiziano Müller <dev-zero@gentoo.org> aria2-1.14.1.ebuild:
  Migrate to bash-completion-r1 eclass.

*aria2-1.14.1 (15 Jan 2012)

  15 Jan 2012; Tiziano Müller <dev-zero@gentoo.org> -aria2-1.9.4.ebuild,
  -aria2-1.10.0.ebuild, -aria2-1.10.1.ebuild, -aria2-1.10.2.ebuild,
  -aria2-1.10.5.ebuild, -aria2-1.10.6.ebuild, -aria2-1.10.7.ebuild,
  -aria2-1.10.8.ebuild, -aria2-1.10.9.ebuild, -aria2-1.11.0.ebuild,
  -aria2-1.11.2.ebuild, -aria2-1.12.0.ebuild, +aria2-1.14.1.ebuild,
  metadata.xml:
  Version bump (bug #388971) and conditionally rebuild doc (bug #366485). Drop
  old versions.

*aria2-1.12.1 (03 Aug 2011)

  03 Aug 2011; Sebastian Pipping <sping@gentoo.org> +aria2-1.12.1.ebuild:
  Bump to 1.12.1, looks trivial

*aria2-1.12.0 (30 Jun 2011)

  30 Jun 2011; Sebastian Pipping <sping@gentoo.org> +aria2-1.12.0.ebuild:
  Bump to 1.12.0, looks trivial

*aria2-1.11.2 (22 May 2011)

  22 May 2011; Sebastian Pipping <sping@gentoo.org> +aria2-1.11.2.ebuild:
  Bump to 1.11.2, looks trivial

*aria2-1.11.0 (21 Mar 2011)

  21 Mar 2011; Sebastian Pipping <sping@gentoo.org> +aria2-1.11.0.ebuild:
  Bump to 1.11.0, looks trivial

*aria2-1.10.9 (10 Jan 2011)

  10 Jan 2011; Sebastian Pipping <sping@gentoo.org> +aria2-1.10.9.ebuild:
  Bump to 1.10.9, looks trivial

*aria2-1.10.8 (19 Dec 2010)

  19 Dec 2010; Sebastian Pipping <sping@gentoo.org> +aria2-1.10.8.ebuild: