@@ -3,15 +3,17 @@ Hash: SHA1
 
 AUX 1.6.3-unaligned_pointers.patch 2252 RMD160 2f5112c335d8d4b71d6c0bc5cf978e8a514757c1 SHA1 9c3ccbb2176903ec2b0335fe4cfcb5472840a0fa SHA256 c0b6e645c07f00a175efc12ca6967289fa6345840a8aacc5ac18a776d96408bd
 DIST aria2-1.14.1.tar.bz2 1636900 RMD160 e4daa218df0776a144421a1f04eb71c410ff7917 SHA1 143684b662886466b801f456d10997d3e36a0f03 SHA256 a436ffaa9fd678a498d2599f00b3885cdc4eda13953dcf715c9ac4ff95b61ab1
+DIST aria2-1.15.0.tar.bz2 2080386 RMD160 14ef1bf3d0e199e7789cab6e4759576fba06058b SHA1 b29e498a31fdcf890ba93749a221f6022784e003 SHA256 02916b399946029674393c6a66d3544e88959610d3b2303fdd2d2365aa680be1
 DIST aria2-1.9.3.tar.bz2 1441999 RMD160 ad5f32c244acd2a5bfc19aafd78a7da886021e29 SHA1 21f429e6d3b9a3904a45dc032b9aa9146ffccc40 SHA256 364f9e5d8dcf3f12bd2683ea0d17274e0088b6dd7f869db35feba4e30ade7613
 EBUILD aria2-1.14.1.ebuild 3360 RMD160 559319133b1eff8e6cbb787eeff5362ef03351e0 SHA1 9570115112bed44dbfdeadecf34eca57b9c83b39 SHA256 84c7265fa8ec23515dad83da740ed065c4c5db700a5cc44fddfb70ed35b039bb
+EBUILD aria2-1.15.0.ebuild 3782 RMD160 5d5c22017c1c0936d4c59896d01c866c45a449c2 SHA1 3c7c5b2c817b96d4f0aaa546657713e617a25353 SHA256 8cc168f20dc5d14c6cbf52c15616de2335514e078a896e060bf3578343eda454
 EBUILD aria2-1.9.3.ebuild 2778 RMD160 eabfe3ba56b3f52ffe7efb58759c844e21c81b06 SHA1 8518c7ac425dc46c00f0bb654b214ebe6b48a453 SHA256 9c9fc6793076e7c214c343024d00fea17d71dd1a6e075346bb83831784d01097
-MISC ChangeLog 15185 RMD160 cc30222370aeb0083546fc11b3df884998e95be7 SHA1 627111438056f16516fd02915e63a1b44c79c3f5 SHA256 cad70c64633b4bb1f1c0b3feb5a15be7b92e0c55abef44a411f56e9eaf9041ad
-MISC metadata.xml 979 RMD160 c6e2d305178428238e62794e92e7c43dafb2a9ba SHA1 e460e5ac7756b286068ec4a30ff0bacd3dc1dc0e SHA256 1c5716c3ddae139c9059bf293d800030942fda629d5c36baba7f542e431e5ba0
+MISC ChangeLog 15324 RMD160 0d390f60c09b41133eb5a7e73c1d77258f52c682 SHA1 623cc362d6778b1c17ba623f0a49e9d9773aec49 SHA256 b38b3f04e8d370f7fc3268f57ea9d04b5df0231646ef4614f92cd765926d390f
+MISC metadata.xml 903 RMD160 5cad2f1c62000b2a1969cadace798f9a919a1939 SHA1 2d09dc81d7c3bf6b931984cdaff02c7de52cd121 SHA256 819fe79f57eb0d27907a471355aa6fc75b2454bde3cc4dccaa81037f5a4dfe71
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/BFuMACgkQX3X2B8XHTom4+ACgogtIoRUWeNkl4LAjNrthcoix
-axkAn2YiyW/tjyCdDJ7MaEE/qiKIYOMd
-=gShW
+iEYEARECAAYFAk/CFJkACgkQX3X2B8XHTomOeACgjiYDRFCpIRovkk1V4jaP/44i
+CDkAoI/3NDM6E4vhVZ9SiSWndFioA3Gj
+=mmpH
 -----END PGP SIGNATURE-----
