@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/aria2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.79 2012/05/05 03:20:39 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.80 2012/05/18 09:07:49 dev-zero Exp $
+
+*aria2-1.15.0 (18 May 2012)
+
+  18 May 2012; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.15.0.ebuild,
+  metadata.xml:
+  Version bump.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> aria2-1.12.1.ebuild,
   aria2-1.14.1.ebuild:
